fixed some animations. Added back buttons.

--- a/index.html
+++ b/index.html
@@ -64,9 +64,11 @@
 				<div class="detail" id="trunk2-detail5"></div>
 			</div>
 			<div id="branch"></div>
-			<div class="leaf leaf-click">
-				<span class="leaf-text leaf-click">RESUME</span>
-				<span class="download"><a href="michael_harvey_resume.pdf">OPEN</a></span>
+			<div class="leaf-wrap">
+				<div class="leaf leaf-click">
+					<span class="leaf-text leaf-click">RESUME</span>
+					<span class="download"><a href="michael_harvey_resume.pdf" target="_blank">OPEN</a></span>
+				</div>
 			</div>
 			<div class="leaf-stem"></div>
 		</div>
@@ -88,6 +90,7 @@
 			<div id="fire6"></div>
 			<div id="log"></div>
 		</div>
+		<span id="fire-back">BACK</span>
 		<div id="building-text" class="building-click">PROJECTS</div>
 		<div id="building-wrap">
 			<div id="building" class="building-click">
@@ -119,7 +122,17 @@
 				<div class="window"></div>
 				<div class="window set2"></div>
 				<div class="window set1"></div>
+
+				<ul class="project">
+					<li><a href="http://www.drawitdescribeit.com" target="_blank">DrawItDescribeIt.com</a></li>
+					<li>A fun, off the wall, social game.</li>
+					<li><a href="https://nameless-journey-8354.herokuapp.com" target="_blank">Upstarted.com</a></li>
+					<li>A sample business site design.</li>
+					<li><a href="https://enthousiaste-baguette-4764.herokuapp.com" target="_blank">EcoBlog</a></li>
+					<li>An experiment in building a microblogging app.</li>
+				</ul>
 			</div>
+			<span id="building-back">BACK</span>
 			<div id="antenna"></div>
 			<div id="antenna-light"></div>
 			<div id="antenna-base"></div>
