changed some divs to html5 tags.

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 		<title>Michael Harvey</title>
 	</head>
 	<body>
-		<div id="sky">
-			<div id="moon">
+		<sky>
+			<moon>
 
-			</div>
-			<div id="sun">
+			</moon>
+			<sun>
 
-			</div>
+			</sun>
 
 			<div id="star1" class="star"></div>
 			<div id="star2" class="star"></div>
@@ -40,7 +40,7 @@
 			<div id="star16" class="star"></div>
 			<div id="star17" class="star"></div>
 			<div id="star18" class="star"></div>
-		</div>
+		</sky>
 
 		<div id="ground">
 			<div id="g-highlight1"></div>
