--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			<div class="leaf-wrap">
 				<div class="leaf leaf-click">
 					<span class="leaf-text leaf-click">RESUME</span>
-					<span class="download"><a href="./michael_harvey_resume.pdf" target="_blank">OPEN</a></span>
+					<span class="download"><a href="https://github.com/michaelharvey17/portfolio-animated/blob/gh-pages/Michael_Harvey_Resume.pdf" target="_blank">OPEN</a></span>
 				</div>
 			</div>
 			<div class="leaf-stem"></div>
